--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <title>Udacity Todos Goals</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/redux/3.7.2/redux.min.js"></script>
+  <script src="https://unpkg.com/react@16.3.0-alpha.1/umd/react.development.js"></script>
+  <script src="https://unpkg.com/react-dom@16.3.0-alpha.1/umd/react-dom.development.js"></script>
+  <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
 </head>
 
 <body>
@@ -13,12 +16,17 @@
     <ul id='todos'></ul>
   </div>
   <div>
-    <h1>Goals list</h1>
+    <h1>Goals</h1>
     <input id='goal' type='text' placeholder='Add Goal' />
     <button id='goalBtn'>Add Goal</button>
     <ul id='goals'></ul>
   </div>
 
+  <hr/>
+
+  <div id='app'>
+    APP
+  </div>
 
   <script type='text/javascript'>
   
@@ -217,22 +225,92 @@ store.subscribe(() => {
         .append(node)
     }
 
-
   </script>
+
   <script type='text/babel'>
-    {/* class App extends React.Component {
+    function List(props) {
+      return (
+        <ul>
+          <li>
+            LIST
+          </li>
+        </ul>
+      )
+    }
+
+    class Todos extends React.Component {
+      addItem = (e) => {
+        e.preventDefault()
+        const name = this.input.value
+        this.input.value = ''
+
+        this.props.store.dispatch(addTodoAction({
+            name,
+            complete: false,
+            id: generateId()
+        }))
+      }
+
       render() {
         return (
           <div>
-            APP
+            <h1>Todo List</h1>
+            <input 
+              type='text'
+              placeholder='Add Todo'
+              ref={(input) => this.input = input}
+            />
+            <button onClick={this.addItem}>Add Todo</button>
+            <List />
           </div>
         )
       }
     }
 
-    React.DOM.render(
-      <App />, documentGetElementById('app')
-    ) */}
+    class Goals extends React.Component {
+
+      addItem = e => {
+        e.preventDefault()
+        const name = this.input.value
+        this.input.value = ''
+
+        store.dispatch(addGoalAction({
+            id: generateId(),
+            name
+        }))
+      }
+
+      render() {
+        return (
+          <div>
+            <h1>Goals</h1>
+            <input 
+              type='text'
+              placeholder='Add Goal'
+              ref={input => this.input = input}
+            />
+            <button onClick={this.addItem}>Add Goal</button>
+            
+            <List />
+          </div>
+        )
+      }
+    }
+
+    class App extends React.Component {
+      render() {
+        return (
+          <div>
+            <Todos store={this.props.store} />
+            <Goals />
+          </div>
+        )
+      }
+    }
+
+    ReactDOM.render(
+      <App store={store} />, document.getElementById('app')
+    )
   </script>
 </body>
 </html>
