Add React Remove item function

--- a/index.html
+++ b/index.html
@@ -236,6 +236,9 @@ store.subscribe(() => {
             <span>
               {item.name}
             </span>
+            <button onClick={() => props.remove(item)}>
+              X
+            </button>
             </li>
           ))}
         </ul>
@@ -254,6 +257,9 @@ store.subscribe(() => {
             id: generateId()
         }))
       }
+      removeItem = todo => {
+        this.props.store.dispatch(removeTodoAction(todo.id))
+      }
 
       render() {
         return (
@@ -266,7 +272,10 @@ store.subscribe(() => {
             />
             <button onClick={this.addItem}>Add Todo</button>
             
-            <List items={this.props.todos} />
+            <List 
+              items={this.props.todos}
+              remove={this.removeItem} />
+
           </div>
         )
       }
@@ -284,7 +293,9 @@ store.subscribe(() => {
             name
         }))
       }
-
+      removeItem = goal => {
+        this.props.store.dispatch(removeGoalAction(goal.id))
+      }
       render() {
         return (
           <div>
@@ -296,7 +307,9 @@ store.subscribe(() => {
             />
             <button onClick={this.addItem}>Add Goal</button>
             
-            <List items={this.props.goals} />
+            <List 
+              items={this.props.goals}
+              remove={this.removeItem} />
           </div>
         )
       }
