Add Todo toggle function

--- a/index.html
+++ b/index.html
@@ -228,12 +228,15 @@ store.subscribe(() => {
   </script>
 
   <script type='text/babel'>
+
     function List(props) {
       return (
         <ul>
           {props.items.map((item) => (
             <li key={item.id}>
-            <span>
+            <span
+              onClick={() => props.toggle && props.toggle(item.id)}
+              style={{textDecoration: item.complete? 'line-through' : 'none'}}>
               {item.name}
             </span>
             <button onClick={() => props.remove(item)}>
@@ -260,6 +263,9 @@ store.subscribe(() => {
       removeItem = todo => {
         this.props.store.dispatch(removeTodoAction(todo.id))
       }
+      toggleItem = (id) => {
+        this.props.store.dispatch(toggleTodoAction(id))
+      }
 
       render() {
         return (
@@ -274,7 +280,8 @@ store.subscribe(() => {
             
             <List 
               items={this.props.todos}
-              remove={this.removeItem} />
+              remove={this.removeItem}
+              toggle={this.toggleItem} />
 
           </div>
         )
