--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <script src="https://unpkg.com/react@16.3.0-alpha.1/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom@16.3.0-alpha.1/umd/react-dom.development.js"></script>
   <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
+  <script src="https://tylermcginnis.com/goals-todos-api/index.js"></script>
+
 </head>
 
 <body>
@@ -25,7 +27,7 @@ const REMOVE_TODO = 'REMOVE_TODO'
 const TOGGLE_TODO = 'TOGGLE_TODO'
 const ADD_GOAL = 'ADD_GOAL'
 const REMOVE_GOAL = 'REMOVE_GOAL'
-
+const RECEIVE_DATA = 'RECEIVE_DATA'
 
 function addTodoAction(todo) {
     return {
@@ -64,6 +66,14 @@ function removeGoalAction(id) {
     }
 }
 
+function receiveDataAction(todos, goals){
+  return {
+    type: RECEIVE_DATA,
+    todos,
+    goals
+  }
+}
+
 function todos(state = [], action) {
   switch(action.type) {
     case ADD_TODO :
@@ -73,6 +83,8 @@ function todos(state = [], action) {
     case TOGGLE_TODO: 
       return state.map( todo => todo.id !== action.id ? todo: 
         Object.assign({}, todo, {complete: !todo.complete}))
+    case RECEIVE_DATA:
+      return action.todos
     default:
       return state
   }
@@ -84,11 +96,21 @@ function goals (state = [], action) {
       return state.concat([action.goal])
     case REMOVE_GOAL:
       return state.filter(goal => goal.id !== action.id)
+    case RECEIVE_DATA:
+      return action.goals
     default: 
         return state
   }
 }
 
+function loading(state = true, action) {
+  switch(action.type) {
+    case RECEIVE_DATA:
+      return false
+    default:
+      return state
+  }
+}
 
 
 
@@ -118,7 +140,8 @@ const logger = store => next => action => {
 
 const store = Redux.createStore(Redux.combineReducers({
   todos,
-  goals
+  goals,
+  loading,
 }), Redux.applyMiddleware(checker, logger))
   
   </script>
@@ -158,9 +181,6 @@ const store = Redux.createStore(Redux.combineReducers({
       }
       removeItem = todo => {
         this.props.store.dispatch(removeTodoAction(todo.id))
-      }
-      toggleItem = (id) => {
-        this.props.store.dispatch(toggleTodoAction(id))
       }
 
       render() {
@@ -221,13 +241,26 @@ const store = Redux.createStore(Redux.combineReducers({
     class App extends React.Component {
       componentDidMount() {
         const { store } = this.props
+
+        Promise.all([
+          API.fetchTodos(),
+          API.fetchGoals()
+        ]).then(([todos, goals]) => {
+          store.dispatch(receiveDataAction(todos, goals))
+        })
+
+
+
         store.subscribe(() => this.forceUpdate())
       }
 
       render() {
         const { store } = this.props
-        const { todos, goals } = store.getState()
+        const { todos, goals, loading } = store.getState()
 
+        if (loading === true) {
+          return <h3> Loading</h3>
+        }
         return (
           <div>
             <Todos todos={todos} store={this.props.store} />
