--- a/index.html
+++ b/index.html
@@ -181,6 +181,12 @@ const store = Redux.createStore(Redux.combineReducers({
       }
       removeItem = todo => {
         this.props.store.dispatch(removeTodoAction(todo.id))
+        
+        return API.deleteTodo(todo.id)
+          .catch(() => {
+            this.props.store.dispatch(addTodoAction(todo))
+            alert('An error occured. Try again')
+        })
       }
 
       render() {
