--- a/index.html
+++ b/index.html
@@ -224,6 +224,12 @@ const store = Redux.createStore(Redux.combineReducers({
       }
       removeItem = goal => {
         this.props.store.dispatch(removeGoalAction(goal.id))
+
+        return API.deleteGoal(goal.id)
+          .catch(() => {
+            this.props.store.dispatch(addGoalAction(goal))
+            alert('An error occured. Try again.')
+          })
       }
       render() {
         return (
