--- a/index.html
+++ b/index.html
@@ -170,14 +170,15 @@ const store = Redux.createStore(Redux.combineReducers({
     class Todos extends React.Component {
       addItem = (e) => {
         e.preventDefault()
-        const name = this.input.value
-        this.input.value = ''
 
-        this.props.store.dispatch(addTodoAction({
-            name,
-            complete: false,
-            id: generateId()
-        }))
+        return API.saveTodo(this.input.value)
+        .then((todo) => {
+          this.props.store.dispatch(addTodoAction(todo))
+          this.input.value = ''
+        })
+        .catch(() => {
+          alert('There was an error.')
+        })
       }
       removeItem = todo => {
         this.props.store.dispatch(removeTodoAction(todo.id))
@@ -186,6 +187,16 @@ const store = Redux.createStore(Redux.combineReducers({
           .catch(() => {
             this.props.store.dispatch(addTodoAction(todo))
             alert('An error occured. Try again')
+        })
+      }
+
+      toggleItem = id => {
+        this.props.store.dispatch(toggleTodoAction(id))
+
+        return API.saveTodoToggle(id)
+        .catch(() => {
+          this.props.store.dispatch(toggleTodoAction(id))
+          alert('An error occured. Try again')
         })
       }
 
