--- a/index.html
+++ b/index.html
@@ -225,14 +225,17 @@ const store = Redux.createStore(Redux.combineReducers({
 
       addItem = e => {
         e.preventDefault()
-        const name = this.input.value
-        this.input.value = ''
 
-        this.props.store.dispatch(addGoalAction({
-            id: generateId(),
-            name
-        }))
+        return API.saveGoal(this.input.value)
+        .then((goal) => {
+          this.props.store.dispatch(addGoalAction(goal))
+          this.input.value = ''
+        })
+        .catch(() => {
+          alert('Threr was an error. Try again')
+        })
       }
+      
       removeItem = goal => {
         this.props.store.dispatch(removeGoalAction(goal.id))
 
