--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ const store = Redux.createStore(Redux.combineReducers({
           this.input.value = ''
         })
         .catch(() => {
-          alert('Threr was an error. Try again')
+          alert('There was an error. Try again')
         })
       }
       
