--- a/index.html
+++ b/index.html
@@ -88,6 +88,19 @@ function handleDeleteTodo(todo) {
   }
 }
 
+function handleAddGoal(name , cb) {
+  return (dispatch) => {
+    return API.saveGoal(name)
+      .then((goal) => {
+        dispatch(addGoalAction(goal))
+        cb()
+      })
+      .catch(() => {
+        alert('There was an error. Try again')
+      })
+  }
+}
+
 function todos(state = [], action) {
   switch(action.type) {
     case ADD_TODO :
@@ -233,15 +246,10 @@ const store = Redux.createStore(Redux.combineReducers({
 
       addItem = e => {
         e.preventDefault()
-
-        return API.saveGoal(this.input.value)
-        .then((goal) => {
-          this.props.store.dispatch(addGoalAction(goal))
-          this.input.value = ''
-        })
-        .catch(() => {
-          alert('There was an error. Try again')
-        })
+        this.props.store.dispatch(handleAddGoal(
+          this.input.value,
+          () => this.input.value = ''
+        ))
       }
       
       removeItem = goal => {
