Cleaned handleDeleteTodo code

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ function handleDeleteTodo(todo) {
           
     return API.deleteTodo(todo.id)
       .catch(() => {
-        this.props.store.dispatch(addTodoAction(todo))
+          dispatch(addTodoAction(todo))
         alert('An error occured. Try again')
    })
   }
