Add Todo thunk functions

--- a/index.html
+++ b/index.html
@@ -75,6 +75,19 @@ function receiveDataAction(todos, goals){
   }
 }
 
+function handleAddTodo(todo, cb) {
+  return (dispatch) => {
+    return API.saveTodo(this.input.value)
+      .then((todo) => {
+        dispatch(addTodoAction(todo))
+        cb()
+      })
+      .catch(() => {
+        alert('There was an error.')
+      })
+  }
+}
+
 function handleDeleteTodo(todo) {
 
   return (dispatch) => {
@@ -88,6 +101,17 @@ function handleDeleteTodo(todo) {
   }
 }
 
+function handleToggle(id) {
+  return dispatch => {
+    dispatch(toggleTodoAction(id))
+
+    return API.saveTodoToggle(id)
+    .catch(() => {
+      dispatch(toggleTodoAction(id))
+      alert('An error occured. Try again')
+    })
+  }
+}
 function handleAddGoal(name , cb) {
   return (dispatch) => {
     return API.saveGoal(name)
@@ -211,27 +235,17 @@ const store = Redux.createStore(Redux.combineReducers({
       addItem = (e) => {
         e.preventDefault()
 
-        return API.saveTodo(this.input.value)
-        .then((todo) => {
-          this.props.store.dispatch(addTodoAction(todo))
-          this.input.value = ''
-        })
-        .catch(() => {
-          alert('There was an error.')
-        })
+        this.props.store.dispatch(handleAddTodo(
+          this.input.value,
+          () => this.input.value = ''
+        ))
       }
       removeItem = todo => {
         this.props.store.dispatch(handleDeleteTodo(todo))        
       }
 
       toggleItem = id => {
-        this.props.store.dispatch(toggleTodoAction(id))
-
-        return API.saveTodoToggle(id)
-        .catch(() => {
-          this.props.store.dispatch(toggleTodoAction(id))
-          alert('An error occured. Try again')
-        })
+        this.props.store.dispatch(handleToggle(id))
       }
 
       render() {
