--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ function receiveDataAction(todos, goals){
 
 function handleAddTodo(todo, cb) {
   return (dispatch) => {
-    return API.saveTodo(this.input.value)
+    return API.saveTodo(name)
       .then((todo) => {
         dispatch(addTodoAction(todo))
         cb()
