--- a/index.html
+++ b/index.html
@@ -138,6 +138,18 @@ function handleDeleteGoal(goal) {
   }
 
 
+function handleInitialData() {
+  return dispatch => {
+    
+    return Promise.all([
+      API.fetchTodos(),
+      API.fetchGoals()
+    ]).then(([todos, goals]) => {
+      dispatch(receiveDataAction(todos, goals))
+    })
+  }
+}
+
 function todos(state = [], action) {
   switch(action.type) {
     case ADD_TODO :
@@ -306,14 +318,7 @@ const store = Redux.createStore(Redux.combineReducers({
       componentDidMount() {
         const { store } = this.props
 
-        Promise.all([
-          API.fetchTodos(),
-          API.fetchGoals()
-        ]).then(([todos, goals]) => {
-          store.dispatch(receiveDataAction(todos, goals))
-        })
-
-
+        store.dispatch(handleInitialData())
 
         store.subscribe(() => this.forceUpdate())
       }
