fix: Change parameter name
The wrong variable name was being passed in and did not match the
variable being passed into API.saveTodo

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ function receiveDataAction(todos, goals){
   }
 }
 
-function handleAddTodo(todo, cb) {
+function handleAddTodo(name, cb) {
   return (dispatch) => {
     return API.saveTodo(name)
       .then((todo) => {
