feat: Add ConnectedGoals

--- a/index.html
+++ b/index.html
@@ -281,18 +281,19 @@ const store = Redux.createStore(Redux.combineReducers({
       }
     }
 
+
     class Goals extends React.Component {
 
       addItem = e => {
         e.preventDefault()
-        this.props.store.dispatch(handleAddGoal(
+        this.props.dispatch(handleAddGoal(
           this.input.value,
           () => this.input.value = ''
         ))
       }
       
       removeItem = goal => {
-        this.props.store.dispatch(handleDeleteGoal(goal))
+        this.props.dispatch(handleDeleteGoal(goal))
       }
 
       render() {
@@ -314,6 +315,20 @@ const store = Redux.createStore(Redux.combineReducers({
       }
     }
 
+
+    class ConnectedGoals extends React.Component {
+      render() {
+        return (
+          <Context.Consumer>
+            {store => {
+              const { goals } = store.getState()
+              return <Goals goals={goals} dispatch={store.dispatch} />
+            }}
+          </Context.Consumer>
+        )
+      }
+    }
+    
     class App extends React.Component {
       componentDidMount() {
         const { store } = this.props
@@ -325,7 +340,7 @@ const store = Redux.createStore(Redux.combineReducers({
 
       render() {
         const { store } = this.props
-        const { todos, goals, loading } = store.getState()
+        const { todos, loading } = store.getState()
 
         if (loading === true) {
           return <h3> Loading</h3>
@@ -333,12 +348,14 @@ const store = Redux.createStore(Redux.combineReducers({
         return (
           <div>
             <Todos todos={todos} store={this.props.store} />
-            <Goals goals={goals} store={this.props.store} />
+            <ConnectedGoals />
 
           </div>
         )
       }
     }
+
+
 
     class ConnectedApp extends React.Component {
       render() {
@@ -351,6 +368,7 @@ const store = Redux.createStore(Redux.combineReducers({
         )
       }
     }
+
     const Context = React.createContext()
 
     class Provider extends React.Component {
