--- a/index.html
+++ b/index.html
@@ -247,17 +247,17 @@ const store = Redux.createStore(Redux.combineReducers({
       addItem = (e) => {
         e.preventDefault()
 
-        this.props.store.dispatch(handleAddTodo(
+        this.props.dispatch(handleAddTodo(
           this.input.value,
           () => this.input.value = ''
         ))
       }
       removeItem = todo => {
-        this.props.store.dispatch(handleDeleteTodo(todo))        
+        this.props.dispatch(handleDeleteTodo(todo))        
       }
 
       toggleItem = id => {
-        this.props.store.dispatch(handleToggle(id))
+        this.props.dispatch(handleToggle(id))
       }
 
       render() {
@@ -281,6 +281,18 @@ const store = Redux.createStore(Redux.combineReducers({
       }
     }
 
+    class ConnectedTodos extends React.Component {
+      render() {
+        return (
+          <Context.Consumer>
+            {store => {
+              const { todos } = store.getState()
+              return <Todos todos={todos} dispatch={store.dispatch} />
+            }}
+          </Context.Consumer>
+        )
+      }
+    }
 
     class Goals extends React.Component {
 
@@ -340,14 +352,14 @@ const store = Redux.createStore(Redux.combineReducers({
 
       render() {
         const { store } = this.props
-        const { todos, loading } = store.getState()
+        const { loading } = store.getState()
 
         if (loading === true) {
           return <h3> Loading</h3>
         }
         return (
           <div>
-            <Todos todos={todos} store={this.props.store} />
+            <ConnectedTodos />
             <ConnectedGoals />
 
           </div>
